# os

./: README.md
Homeworks 2/H1/manager/: CMakeLists.txt
Homeworks 2/H1/manager/src/: main.c  manager
Homeworks 2/H1/manager/test/: manager
Homeworks 2/H1/worker/src/: worker
Homeworks 2/H2/buyer/src/: main.c
Homeworks 2/H2/test/: buyer  ticket_office
Homeworks 3/buyer/include/: functions.h
Homeworks 3/buyer/src/: functions.c  main.c
Homeworks 3/test/: buyer  ticket_office
Homeworks 3/ticket_office/include/: functions.h
Homeworks 3/ticket_office/src/: functions.c  main.c
L2/: CMakeLists.txt  main
L2/include/: .functions.h.swp  functions.h
L2/src/: functions.c  main.c
L2/test/: main  test_performance.sh
L3/main_program/src/: main.c
L3/test/: cpplint_report.txt  main  main_output.txt  numbers.txt  test_performance.sh  test_style.sh  worker
L3/worker/src/: main.c
Lab 1/H1/include/: functions.h
Lab 1/H1/src/: functions.c  main.c
Lab 1/H1/test/: main.c
Lab 1/H2/include/: functions.h
Lab 1/H2/src/: functions.c  main.c
Lab 1/H2/test/: mem_program  test_performance.sh
Lab 1/H3/include/: functions.h
Lab 1/H3/src/: functions.c  main.c
Lab 1/H3/test/: main  test_performance.sh
Lab 1/L1/: .clang-format  CMakeLists.txt
Lab 1/L1/src/: main.c
Lab 3/H1/test/: test_performance.sh
Lab 3/H1/worker/src/: main.c  (+1 more)
Lab 3/H2/test/: cpplint_report.txt  test_performance.sh
Threads/src/: main.c
include/: array_functions.h
message_queue_practice/receiver/src/: main.c
message_queue_practice/sender/src/: main.c
src/: array_functions.c
(+8 files in other folders)
